--- a/css/estilos.css
+++ b/css/estilos.css
@@ -95,6 +95,9 @@ li{
     margin-right: 5px;
 }
 
+button{
+    border-radius: 10px;
+}
 
 /* CSS IDs y Clase */
 
@@ -145,6 +148,64 @@ li{
 
 #logo{
     padding-top: 0px;
+}
+
+/* Diseño de las tarjetas del portfolio */
+.filaportfolio{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 30px 30px;
+    margin-bottom: 15px;
+    margin-top: 15px;
+}
+
+.card{
+    width: 250px;
+    background-color: #191919;
+    border-radius: 15px;
+}
+
+.card img{
+    width: 250px;
+    border-radius: 15px 15px 0px 0px;
+}
+
+.card h3{
+    color: #ffc900;
+}
+
+.card h4{
+    margin: 0 5px 5px 0;
+}
+
+.card h3,.card h4,.card p,.card .masinfo{
+    padding: 0 15px;
+}
+
+.card .masinfo{
+    margin: 15px 0px 15px 0px;
+    height: 26px;
+}
+
+.card .masinfo button{
+    color: #222;
+    background-color: #ffc900;
+    font-weight: 600;
+    padding-left: 15px;
+    padding-right: 15px;
+    float: right;
+}
+
+.card .sep{
+    margin:0 0px 5px 0;
+    border: 1px solid #ffc900;
+}
+
+.card button{
+    margin-top: 5px;
+    padding: 5px;
 }
 
 #experiencia{
