--- a/css/estilos.css
+++ b/css/estilos.css
@@ -34,6 +34,7 @@ nav{
     width: 100%;
     height: 55px;
     background-color: hsla(0,2%,8%,.6);
+    /* Crea un efecto de transparencia porosa y borrosa */
     backdrop-filter: saturate(180%) blur(20px);
     /* border-bottom:  1px solid white; */
     padding-top: 10px;
