--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,6 +3,7 @@
     --black:#161515;
     --pur:#8B83AF;
     --fontFamily: 200 14px "Space Grotesk", sans-serif;
+    --BackgroundImg:url("../imagenes/background.svg");
 }
 
 *{
@@ -118,16 +119,6 @@ button{
     color:var(--pur);
 }
 
-#img-perfil{
-    height: 250px;
-    border: 1px solid var(--black);
-    transition: all .5s ease-in-out;
-}
-
-#img-perfil:hover{
-    border: 1px solid var(--pur);
-}
-
 /* ----SOCIAL MEDIA--------------------------------------------------------------------------------------------------- */
 /* ul */
 #social-media{
@@ -147,11 +138,54 @@ button{
 
 #inicio{
     padding-top: 75px;
-    background-image: url("../imagenes/background.svg");
+    background-image: var(--BackgroundImg);
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 280px;
 }
+
+#sobremi{
+    display: grid;
+    grid-template: 1fr 1fr / auto 1fr;
+    align-items: center;
+    justify-items: left;
+}
+
+#title{
+    grid-column: 2;
+    grid-row: 1;
+    background-color: var(--pur);
+    width: fit-content;
+    padding: 7px 10px 7px 25px;
+    border-radius: 0 5em 5em 0px;
+    transition: all .5s ease;
+}
+#title:hover{
+    background-image: var(--BackgroundImg);
+    color: var(--pur);
+    cursor: pointer;
+    padding-left: 3em;
+}
+
+#image{
+    grid-column: 1;
+    grid-row: 1/3;
+    background-image: var(--BackgroundImg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 3em;
+}
+
+#img-perfil{
+    height: 250px;
+}
+
+#text{
+    grid-column:2;
+    grid-row: 2;
+    padding-left: 1em;
+}
+
 /* Diseño de las tarjetas del portfolio */
 .filaportfolio{
     display: flex;
