--- a/css/estilos.css
+++ b/css/estilos.css
@@ -144,14 +144,14 @@ button{
     min-height: 280px;
 }
 
-#sobremi{
+#aboutme{
     display: grid;
     grid-template: 1fr 1fr / auto 1fr;
     align-items: center;
     justify-items: left;
 }
 
-#title{
+#title_aboutme{
     grid-column: 2;
     grid-row: 1;
     background-color: var(--pur);
@@ -160,14 +160,14 @@ button{
     border-radius: 0 5em 5em 0px;
     transition: all .5s ease;
 }
-#title:hover{
+#title_aboutme:hover{
     background-image: var(--BackgroundImg);
     color: var(--pur);
     cursor: pointer;
     padding-left: 3em;
 }
 
-#image{
+#image_aboutme{
     grid-column: 1;
     grid-row: 1/3;
     background-image: var(--BackgroundImg);
@@ -176,11 +176,11 @@ button{
     border-radius: 3em;
 }
 
-#img-perfil{
+#image_aboutme img{
     height: 250px;
 }
 
-#text{
+#text_aboutme{
     grid-column:2;
     grid-row: 2;
     padding-left: 1em;
