--- a/css/estilos.css
+++ b/css/estilos.css
@@ -192,6 +192,10 @@ button{
     background: whitesmoke;
 }
 
+#title_aboutme:hover a, #title_aboutme:hover ~ #text_aboutme p strong{
+    color: var(--pur);
+} 
+
 #image_aboutme{
     grid-column: 1;
     grid-row: 1/3;
@@ -314,11 +318,12 @@ button{
     /* Aqui tenemos un tema con el grid-template-columns por que si yo pongo 350px en los ancho de la columna esto se define
         y pierde sentido cuando el ancho de la pantalla no es la suma de las tarjetas "cardexp" entonces lo dejo como 1fr (de manera automatica)
         y ya despues veo que podria pasar */
-    grid-template-columns: repeat(3, 1fr); 
+    grid-template-columns: repeat(3, 350px); 
     grid-gap: 10px;
     justify-content: space-between;
     align-content: space-around;
 }
+
 .cardexp{
     background-color: var(--black);
     border-radius: 15px;
@@ -397,4 +402,58 @@ input:hover[type="submit"]{
     0%{background-position:20% 82%}
     5%{background-position:100% 19%}
     100%{background-position:50% 82%}
+}
+
+/* Si el tamaño de la pantalla es 400 o menos se cambia a estas pripiedades */
+@media only screen and (max-width:400px){
+
+    section{
+        padding: 10px 20px 10px 20px;
+    }
+
+    nav ul li a{
+        font-size:.7em;
+    }
+    #inicio{
+        text-align: center;
+    }
+    
+    #inicio ul{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    #aboutme{
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(3,auto) ;
+        gap: 10px;
+    }
+    #image_aboutme{
+        grid-column: 1;
+        grid-row: 1;
+        justify-self: center;
+    }
+    #title_aboutme{
+        grid-column: 1;
+        grid-row: 2;
+        justify-self: center;
+    }
+    #text_aboutme{
+        grid-column: 1;
+        grid-row: 3;
+        justify-self: center;
+    }
+
+    .filaportfolio{
+        justify-content: center;
+    }
+    .gridexp{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .itemform{
+        grid-template-columns: 1fr 2fr;
+    }
+
 }
