Rensonsive Iphone (Tets)

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -478,3 +478,77 @@ input:hover[type="submit"]{
     }
 
 }
+
+@media only screen and (max-width:1284px){
+
+    section{
+        padding: 10px 20px 10px 20px;
+    }
+
+    nav ul li a{
+        font-size:.7em;
+    }
+
+    #inicio{
+        text-align: center;
+    }
+
+    #inicio ul{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    #aboutme{
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(3,auto) ;
+    }
+    #image_aboutme{
+        grid-column: 1;
+        grid-row: 1;
+        justify-self: center;
+        border-radius: 3em 3em 0em 0em;
+        
+    }
+    #title_aboutme{
+        grid-column: 1;
+        grid-row: 2;
+        justify-self: center;
+        border-radius: 0em 0em 3em 3em;
+        padding:0;
+        width: 166.656px;
+    }
+
+    #title_aboutme h2{
+        font-size: 2em;
+        text-align: center;
+    }
+
+    #text_aboutme{
+        padding-top: 1em;
+        grid-column: 1;
+        grid-row: 3;
+        justify-self: center;
+    }
+
+    #text_aboutme p{
+        text-align: center;
+    }
+
+    .filaportfolio{
+        justify-content: center;
+    }
+    
+    #cualidades h2, #cualidades h3{
+        text-align: center;
+    }
+
+    .gridexp{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .itemform{
+        grid-template-columns: 1fr 2fr;
+    }
+
+}
