Cambios de mejora en el diseño

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,7 +3,6 @@
     --black:#161515;
     --pur:#8B83AF;
     --fontFamily: 200 14px "Space Grotesk", sans-serif;
-    --BackgroundImg:url("../imagenes/background.svg");
     --AnimateGblobal: all 0.3s ease;
     --Rainbow:linear-gradient(
         124deg,
@@ -25,9 +24,11 @@
     padding:0px;
 }
 body{
-    background-color: var(--black);
     color: white;
     font:  var(--fontFamily);
+    background: var(--Rainbow);
+    background-size: 1500% 1500%;
+    animation:rainbow 18s ease infinite;
 }
 #inicio h2{
     color: var(--black);
@@ -149,18 +150,6 @@ button{
 }
 
 /* ------------------------------------------------------------------------------------------------------------------- */
-#background_g{
-    height:100%;
-    width:100%;
-    left:0;
-    top:0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    background: var(--Rainbow);
-    background-size: 1500% 1500%;
-    animation:rainbow 18s ease infinite;
-}
 
 #inicio{
     padding-top: 75px;
@@ -219,7 +208,7 @@ button{
 }
 
 /* Diseño de las tarjetas del portfolio */
-#cualidades {
+#proyect {
     border-top: 1px solid var(--pur);
     background-color: var(--black);
 }
@@ -311,14 +300,11 @@ button{
     border-radius: 0 0 5em 5em;
 }
 
-#experiencia{
+#exp{
     color: var(--black);
-    background:var(--Rainbow);
-    background-size: 1500% 1500%;
-    animation:rainbow 18s ease infinite;
 }
 
-/* Card Experiencia */
+/* Card Exp */
 .gridexp{
     padding-top: 20px;
     display:grid;
@@ -474,7 +460,7 @@ input:hover[type="submit"]{
         justify-content: center;
     }
     
-    #cualidades h2, #cualidades h3{
+    #proyect h2, #proyect h3{
         text-align: center;
     }
 
