--- a/css/estilos.css
+++ b/css/estilos.css
@@ -446,8 +446,8 @@ input:hover[type="submit"]{
 
     #title_aboutme:hover{
         cursor: pointer;
-        padding-left: 100%;
-        padding-right: 100%;
+        padding: 0%;
+        border-radius: 0px;
     }
 
     #text_aboutme{
