--- a/css/estilos.css
+++ b/css/estilos.css
@@ -117,6 +117,20 @@ button{
     color: #16151500;
     transition: var(--AnimateGblobal);
 }
+footer ul{
+    width: 300px;
+    background-color: var(--black);
+    border-radius: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    font-weight: 700;
+    text-align: center;
+}
 
 /* CSS IDs y Clase */
 
