v.10 -Display de error en un dato del formulario -Correcion de error en el id de correo que probocaba un valor null -Proximos cambios...🔜 (apis)

--- a/proyects/Masterdots/css/styles.css
+++ b/proyects/Masterdots/css/styles.css
@@ -64,6 +64,14 @@ footer{
 }
 #email{
     border-radius: 5px;
-    
+
     width: 278px;
+}
+#error{
+    text-align: center;
+    color: #fd0c49;
+    font-weight: 300;
+    font-size: 14px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
