--- a/proyects/Masterdots/css/styles.css
+++ b/proyects/Masterdots/css/styles.css
@@ -49,6 +49,18 @@ select{
 footer{
     font-weight: 100;
 }
+/* Clases */
+
+.avatarItem{
+    background-color: #fff;
+    border-radius: 5px;
+    border: #fd0c49 1px solid;
+    width:40px;
+    height:40px;
+    padding-top: 5px;
+    padding-left: 5px;
+}
+
 /* IDs */
 #nicka{
     float: left;
@@ -75,3 +87,39 @@ footer{
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
+#avatar{
+    float: left;
+}
+
+#avatarContainer{
+    display: flex;
+    background-color: #fff;
+    border-radius: 5px;
+    border: #fd0c49 1px solid;
+    width:125px;
+    height:125px;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
+}
+
+#avatarGrid{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 5px;
+    margin-top: 28px;
+}
+
+
+#needed {
+    text-align: left;
+    color: #a3a1a1;
+    font-size: 14px;
+    font-weight: 300;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
