--- a/proyects/proyect_n/estilos_proyecton.css
+++ b/proyects/proyect_n/estilos_proyecton.css
@@ -1,9 +1,45 @@
 body {
     background-color: #eee;
+    font-family: Arial, Helvetica, sans-serif;
 }
-#over{
-    width: 100px;
-    height: 100px;
-    background-color: #f00;
-    overflow-y: auto;
+
+.dropdown-btn{
+    background-color: #4caf50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown{
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content{
+    display: none;
+    position: absolute;
+    background-color: #f1eded;
+    min-width: 160px;
+    box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a{
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover{
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-btn{
+    background-color: #3e8e41;
+} 
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
